crates/tests/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__unregister_segment__simple_4_reregister_all_segments_data.snap
---
source: crates/tests/re_redap_tests/src/tests/unregister_segment.rs
expression: "filtered_batch.filter_columns_by(|f|\nf.metadata().get(\"rerun:index_kind\").is_none()).unwrap().format_snapshot(false)"
---
┌──────────────────┬───────────────────┬──────────────────┐
│ rerun_segment_id ┆ rerun_layer_names ┆ rerun_num_chunks │
╞══════════════════╪═══════════════════╪══════════════════╡
│ my_segment_id1   ┆ [base]            ┆ 4                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ my_segment_id2   ┆ [base]            ┆ 2                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ my_segment_id3   ┆ [base]            ┆ 6                │
└──────────────────┴───────────────────┴──────────────────┘
